# session-matters

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LESSONS.md  MAP.md  PROJECT.md  README.md  TLDR.md  justfile  release-please-config.json  tools.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
NOTES/: daemon-architecture.md
crates/: test_support.rs
crates/sm-cli/: Cargo.toml  build.rs
crates/sm-cli/benches/: hot_path.rs
crates/sm-cli/src/: cli.rs  lib.rs  main.rs  mcp.rs  tool_contracts.rs  tool_docs.rs  tool_examples.rs
crates/sm-cli/src/cli/: capture.rs  cli_def.rs  config.rs  daemon.rs  delete.rs  doctor.rs  generated_help.rs  get.rs  label.rs  link.rs  logs.rs  mail.rs  mcp.rs  mod.rs  namespace.rs  namespace_resolver.rs  nudge.rs  output.rs  run.rs  selector_scope.rs  wait.rs
crates/sm-cli/src/mcp/: generated_instructions.rs  generated_schema.rs  instructions.rs  protocol.rs  response.rs  schema.rs  server.rs  tools.rs  transport.rs
crates/sm-cli/src/mcp/generated_schema/: agent_capture.json  agent_delete.json  agent_get.json  agent_label.json  agent_list.json  agent_run.json  doctor.json  link.json  logs.json  mail_check.json  mail_read.json  mail_send.json  mail_stop_check.json  namespace_get.json  namespace_list.json  nudge.json  session_capture.json  session_delete.json  session_get.json  session_label.json  session_list.json  session_run.json  wait.json
crates/sm-cli/src/mcp/tools/: mod.rs
crates/sm-cli/templates/: SKILL.md
crates/sm-cli/tests/: cli_config_test.rs  cli_delete_test.rs  cli_get_test.rs  cli_help_surface_test.rs  cli_isolation_test.rs  cli_namespace_test.rs  cli_selector_scope_test.rs  generated_surface_guard_test.rs  mcp_protocol_test.rs  mcp_schema_snapshot_test.rs  runtime_contract_snapshot_test.rs  version_flag_test.rs
crates/sm-cli/tests/cli_get_test/: agent_config.rs  create_session.rs  help.rs  helpers.rs  run_resolution.rs  session_read.rs
crates/sm-cli/tests/common/: mod.rs
crates/sm-cli/tests/mcp_protocol_test/: agent_lifecycle.rs  config_namespace.rs  handshake.rs  helpers.rs  mail.rs  schema.rs  selectors.rs
crates/sm-cli/tests/snapshots/: mcp_schema_snapshot_test__mcp_server_instructions.snap  mcp_schema_snapshot_test__mcp_tool@agent_capture.snap  mcp_schema_snapshot_test__mcp_tool@agent_delete.snap  mcp_schema_snapshot_test__mcp_tool@agent_get.snap  mcp_schema_snapshot_test__mcp_tool@agent_label.snap  mcp_schema_snapshot_test__mcp_tool@agent_list.snap  mcp_schema_snapshot_test__mcp_tool@agent_run.snap  mcp_schema_snapshot_test__mcp_tool@doctor.snap  mcp_schema_snapshot_test__mcp_tool@link.snap  mcp_schema_snapshot_test__mcp_tool@logs.snap  mcp_schema_snapshot_test__mcp_tool@mail_check.snap  mcp_schema_snapshot_test__mcp_tool@mail_read.snap  mcp_schema_snapshot_test__mcp_tool@mail_send.snap  mcp_schema_snapshot_test__mcp_tool@mail_stop_check.snap  mcp_schema_snapshot_test__mcp_tool@namespace_get.snap  mcp_schema_snapshot_test__mcp_tool@namespace_list.snap  mcp_schema_snapshot_test__mcp_tool@nudge.snap  mcp_schema_snapshot_test__mcp_tool@session_capture.snap  mcp_schema_snapshot_test__mcp_tool@session_delete.snap  mcp_schema_snapshot_test__mcp_tool@session_get.snap  mcp_schema_snapshot_test__mcp_tool@session_label.snap  mcp_schema_snapshot_test__mcp_tool@session_list.snap  mcp_schema_snapshot_test__mcp_tool@session_run.snap  mcp_schema_snapshot_test__mcp_tool@wait.snap  runtime_contract_snapshot_test__rtmd_payload_json_shapes_are_snapshotted.snap
crates/sm-core/: Cargo.toml  build.rs
crates/sm-core/src/: agent_config.rs  error.rs  label.rs  lib.rs  mail.rs  mcp.rs  namespace.rs  paths.rs  proto.rs  runtime.rs  selector.rs  session.rs  tool_contracts.rs  tool_sources.rs  types.rs
crates/sm-core/src/proto/: bridge.rs  doctor.rs  messaging.rs  namespace.rs  rpc.rs  session.rs  spawn.rs  target.rs  tests.rs
crates/sm-core/src/selector/: display.rs  parser.rs  scope.rs  tests.rs  types.rs
crates/sm-core/src/tool_contracts/: contract.rs  metadata.rs  params.rs  raw.rs  registry.rs  render.rs
crates/sm-daemon/: Cargo.toml
crates/sm-daemon/src/: agent_config.rs  events.rs  handler.rs  identity_client.rs  lib.rs  lifecycle.rs  mcp_bridge.rs  mcp_tools.rs  namespace.rs  polish.rs  reconcile.rs  server.rs  socket.rs  spawn_request.rs  store_lock.rs
crates/sm-daemon/src/handler/: dispatch.rs  messaging.rs  sessions.rs  spawn.rs  state.rs  target.rs
crates/sm-daemon/src/mcp_tools/: agent.rs  args.rs  control.rs  mail.rs  namespace.rs
crates/sm-daemon/tests/: capture_target.rs  delete_grace_expired.rs  handler.rs  handler_messaging.rs  mcp_tools.rs  namespace_rpc.rs  rtmd_driver.rs
crates/sm-daemon/tests/common/: mod.rs
crates/sm-daemon/tests/handler/: agent_config.rs  lifecycle.rs  logs_doctor.rs  spawn_launch.rs  spawn_namespace.rs
crates/sm-driver/: Cargo.toml
crates/sm-driver/src/: conv.rs  driver.rs  inprocess.rs  lib.rs  rtmd.rs
crates/sm-driver/tests/: rtmd_nudge.rs  rtmd_spawn.rs
crates/sm-driver/tests/common/: mod.rs
crates/sm-paths/: Cargo.toml
crates/sm-paths/src/: lib.rs
crates/sm-store/: Cargo.toml
crates/sm-store/src/: lib.rs  schema.rs
crates/sm-store/src/sqlite/: events.rs  labels.rs  mail.rs  migrations.rs  mod.rs  namespaces.rs  sessions.rs  sessions_tests.rs  time.rs
scripts/: check-loc-limit.sh
tools/: _shared.toml  capture.toml  doctor.toml  label.toml  link.toml  logs.toml  mail.toml  namespace.toml  nudge.toml  run.toml  session.toml  wait.toml
