[workspace]
resolver = "3"
members = [
    "crates/sm-core",
    "crates/sm-store",
    "crates/sm-driver",
    "crates/sm-daemon",
    "crates/sm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/srobinson/session-matters"

[workspace.dependencies]
sm-core = { path = "crates/sm-core" }
sm-store = { path = "crates/sm-store" }
sm-driver = { path = "crates/sm-driver" }
sm-daemon = { path = "crates/sm-daemon" }
sm-cli = { path = "crates/sm-cli" }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", features = ["process", "signal", "term"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
uuid = { version = "1.9", features = ["serde", "v7"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"
