[workspace]
resolver = "3"
members = [
    "crates/sm-paths",
    "crates/sm-core",
    "crates/sm-store",
    "crates/sm-driver",
    "crates/sm-daemon",
    "crates/sm-cli",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/littleorgans/session-matters"

[workspace.dependencies]
sm-paths = { path = "crates/sm-paths" }
sm-core = { path = "crates/sm-core" }
sm-store = { path = "crates/sm-store" }
sm-driver = { path = "crates/sm-driver" }
sm-daemon = { path = "crates/sm-daemon" }
sm-cli = { path = "crates/sm-cli" }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
lilo-rm-client = "0.6.1"
lilo-rm-core = "0.6.1"
nix = { version = "0.30", features = ["process", "signal", "term", "user"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
toml = "0.8"
uuid = { version = "1.9", features = ["serde", "v7"] }

assert_cmd = "2"
criterion = "0.5"
insta = { version = "1", features = ["json", "redactions"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[profile.install-local]
inherits = "release"
codegen-units = 16
lto = false

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    # Disabled until process, PTY, socket, and identity code has Windows implementations.
    # "x86_64-pc-windows-msvc",
]
installers = [
    "shell",
    # Re-enable with the Windows target.
    # "powershell",
]
github-attestations = true
# release-please creates the GitHub Release; cargo-dist only uploads into it.
create-release = false
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md"]
auto-includes = false
pr-run-mode = "skip"
