[package]
name = "sm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = true

[lib]
name = "sm_cli"
path = "src/lib.rs"

[[bin]]
name = "sm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
nix.workspace = true
serde_json.workspace = true
sm-core.workspace = true
sm-daemon.workspace = true
tokio.workspace = true
uuid.workspace = true

[build-dependencies]
serde_json.workspace = true
sm-core.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
im-core = { path = "../../../identity-matters/crates/im-core" }
im-store = { path = "../../../identity-matters/crates/im-store" }
insta.workspace = true
tempfile.workspace = true

[[bench]]
name = "hot_path"
harness = false
