[package]
name = "sm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.dist]
dist = true

[lib]
name = "sm_cli"
path = "src/lib.rs"

[[bin]]
name = "sm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lilo-rm-core.workspace = true
nix.workspace = true
serde_json.workspace = true
sm-core.workspace = true
sm-daemon.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[build-dependencies]
serde_json.workspace = true
sm-core.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
chrono.workspace = true
criterion.workspace = true
lilo-im-core.workspace = true
lilo-im-store.workspace = true
insta.workspace = true
tempfile.workspace = true

[[bench]]
name = "hot_path"
harness = false

[lints]
workspace = true
