[package]
name = "sm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
indexmap.workspace = true
lilo-rm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sm-paths.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
