[package]
name = "sm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lilo-im-core = "0.1"
lilo-im-store = "0.1"
lilo-im-stub = "0.1"
lilo-rm-core.workspace = true
lilo-rm-client.workspace = true
nix.workspace = true
serde_json.workspace = true
sm-core.workspace = true
sm-driver.workspace = true
sm-store.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
