[package]
name = "sm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lilo-im-core.workspace = true
lilo-im-store.workspace = true
lilo-im-stub.workspace = true
lilo-rm-core.workspace = true
lilo-rm-client.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
sm-core.workspace = true
sm-driver.workspace = true
sm-store.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
