[package]
name = "sm-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
lilo-rm-client.workspace = true
lilo-rm-core.workspace = true
nix.workspace = true
sm-core.workspace = true
thiserror.workspace = true
uuid.workspace = true
